# agent-v1

./: .gitignore  LICENSE  README.md  Readme.md  pyproject.toml  run_all.py
.claude/skills/document-processor/: SKILL.md
backend/: main.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  prompts.py
backend/app/providers/: ai21.py  anthropic.py  base.py  cerebras.py  cohere.py  deepinfra.py  deepseek.py  factory.py  fireworksai.py  gemini.py  groq.py  huggingface.py  mistral.py  nvidianim.py  openai.py  openrouter.py  togetherai.py
backend/app/services/: compression.py  telemetry.py
backend/providers/: ai21_provider.py  anthropic_provider.py  base_provider.py  cerebras_provider.py  cohere_provider.py  deepinfra_provider.py  deepseek_provider.py  fireworkai_provider.py  gemini_provider.py  groq_provider.py  huggingface_provider.py  mistral_provider.py  nvidianim_provider.py  openai_provider.py  openrouter_provider.py  provider_factory.py  togetherai_provider.py
backend/routers/: __init__.py  auth.py  chat.py  memory_working.py
backend/services/: compression_service.py  memory_stats.py  prompt.py
backend/tests/: provider_test.py
backend/utils/: fact_storage.py  memory_utils.py
docs/: backend_folder.md  ltm_doc.md  ltm_memory.txt  memory_audit_report.md  memory_layer_architecture_audit.md  system_architecture_spec_working_layer_memory.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/electron/: main.cjs  preload.cjs
frontend/src/: App.jsx  styles.css
(+84 files in other folders)
