[project]
name = "agent-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai21>=4.3.0",
    "anthropic>=0.109.1",
    "cerebras>=0.0.1",
    "cohere>=7.0.3",
    "deepseek-sdk>=0.1.1",
    "fastapi>=0.136.3",
    "fireworks-ai>=0.19.20",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "groq>=1.4.0",
    "huggingface-hub>=1.18.0",
    "mistralai>=2.4.9",
    "openai>=2.41.0",
    "pyautogen>=0.10.0",
    "python-dotenv>=1.2.2",
    "tabulate>=0.10.0",
    "tavily-python>=0.7.25",
    "together>=2.16.0",
    "uvicorn>=0.49.0",
    "wikipedia>=1.4.0",
]
